Also emit showTitleChanged when reloading the config

BUG:433954
FIXED-IN:5.21.3


(cherry picked from commit 1b6d0046f888b155cf5c4011b10d681c736b914f)